--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Run Selenium Test
 on:
   push:
-    branches: ["main"]
+    branches: ["master"]
 jobs:
   test:
     runs-on: windows-latest
